# elastic-zeroentropy

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GITHUB_SETUP.md  LICENSE  MARKETING.md  Makefile  PUBLISHING.md  PUBLISHING_SIMPLE.md  QUICKSTART.md  README.md  REPOSITORY_CHECKLIST.md  SECURITY.md  TESTING_AND_DEPLOYMENT.md  TROUBLESHOOTING.md  env.example  pyproject.toml  pytest.ini  run_demo.sh
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md  repository-settings.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: deployment-status.yml  publish.yml  python-publish.yml  release.yml  test-simple.yml  test.yml  tests.yml
docs/: index.md
examples/: README_demo.md  basic_usage.py  demo_ui.py  requirements_demo.txt
scripts/: bump_version.py  deployment-health-check.py  setup-repository.sh
src/elastic_zeroentropy/: __init__.py  cli.py  config.py  elasticsearch_client.py  exceptions.py  models.py  reranker.py  zeroentropy_client.py
tests/: __init__.py  test_config.py  test_reranker.py  test_zeroentropy_client.py
